Fix background display on small screens

--- a/src/styles/5.layout/_section-wrapper.scss
+++ b/src/styles/5.layout/_section-wrapper.scss
@@ -24,7 +24,7 @@
       height: 100%;
       width: 100vw;
       top: 0;
-      left: -12%;
+      left: -20px;
       z-index: -1;
     }
   }
